golden/error/lex_unclosed_triple_string_literal.test
"""
This is unclosed as well

# output:
 --> stdin:1:0
  |
1 | """
  | ^~~
Error: Unexpected end of input, string literal is not closed.
